Atualização do composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "irmnet/auth",
+    "name": "irmnet/setor",
     "description": "Module of management of sector.", 
     "keywords": [
     "framework",
